# AI-Bank-Agent-Prototype

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  Procfile  README.md  docker-compose.yml  index.html  pyproject.toml
.github/workflows/: ci.yml
agent/: Dockerfile  pyproject.toml
agent/src/bankagent_agent/: bank_client.py  call_record.py  config.py  events.py  idle.py  instrumentation.py  latency.py  main.py  session_state.py  transcripts.py
agent/src/bankagent_agent/agents/: banking_agent.py  identity_agent.py  prompts.py  support_tools.py
agent/tests/: test_auth_gates.py  test_bank_client.py  test_call_record.py  test_config.py  test_idle.py  test_instrumentation.py  test_latency.py  test_tool_schemas.py  test_transcripts.py
agent/tests/behavioral/: conftest.py  test_account_tools.py  test_call_control.py  test_refusal_escalation.py  test_step_up.py  test_verification_gate.py
backend/: Dockerfile  pyproject.toml
backend/src/bankagent_backend/: app.py  config.py  fixtures.py  main.py
backend/src/bankagent_backend/routers/: calls.py  cards.py  customers.py  demo.py  disputes.py  escalations.py  faq.py  livekit_token.py  stepup.py  transcripts.py
backend/tests/: conftest.py  test_calls.py  test_cards_disputes.py  test_customers.py  test_faq_demo.py  test_stepup.py  test_token.py  test_transcripts.py
docs/: PITCH.md  PRICING.md  pitch-site.html
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: ActivityPanel.tsx  CallPanel.tsx  ScenarioPicker.tsx  SupervisorPanel.tsx  TranscriptView.tsx
frontend/src/hooks/: useToolEvents.ts
frontend/src/lib/: api.ts  types.ts
scripts/: publish_site.sh  setup_sip.py
shared/: pyproject.toml
shared/src/bankagent_shared/: __init__.py  events.py  logging.py  models.py  redaction.py
shared/tests/: test_redaction.py
