[project]
name = "bankagent-agent"
version = "0.1.0"
description = "LiveKit voice agent for the bank-agent POC"
requires-python = ">=3.12,<3.14"
dependencies = [
    "livekit-agents[anthropic]~=1.6",
    "httpx>=0.27",
    "tenacity>=9.0",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "bankagent-shared",
]

[tool.uv.sources]
bankagent-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bankagent_agent"]
