[project]
name = "bankagent-backend"
version = "0.1.0"
description = "Mock core-banking API for the bank-agent POC (FastAPI)"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "livekit-api>=1.0",
    "pydantic-settings>=2.6",
    "bankagent-shared",
]

[tool.uv.sources]
bankagent-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bankagent_backend"]
