[project]
name = "bankagent-shared"
version = "0.1.0"
description = "Shared models, PII redaction, and logging for the bank-agent POC"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pydantic>=2.9",
    "structlog>=24.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bankagent_shared"]
